2006-05-13  Derek Price  <derek@ximbiot.com>

	* commit_prep.pl: Sync comments with recent changes.
	* log_accum.pl: Ditto.
	(read_logfile): Ignore missing log files.
	(build_message_body): Indent log text.
	(main): Don't build cvsweb URLs unless requested.
	(Patch from Sylvain Beucler <beuc@beuc.net>.)

	* log_accum.pl: Use only the last dir from CVSROOT in cvsweb URLs by
	default.

2006-05-12  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: Restore URL creation.

	* log_accum.pl: Handle config files.
	(new_config, parse_config): New functions.

	* log_accum.pl: Move argument parsing to Getopt::Long, eliminating
	more globals.
	(set_defaults): New function.

2006-05-11  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: Gradually restoring functionality.

2006-05-10  Derek Price  <derek@ximbiot.com>

	* commit_prep.pl, log_accum.pl: More simplification and cleanup.  Diff
	and URL functionality temporarily disabled.

2006-05-09  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: First pass at organizing and eliminating globals.  Does
	not alter functionality.

	* log_accum.pl: Comment out debug prints.

	* log_accum.pl: Handle file names with spaces.
	($CVSWEB_URI): Remove trailing /.
	(@path): Delete global.
	(change_summary): Accept module argument.  Avoid unneeded variable
	indirections.
	(derive_subject_from_changes_file, mail_notification): Accept module
	argument.
	(process_argv): Return module instead of file list.

	* commit_prep.pl: Update copyright year.
	* log_accum.pl: Update copyright year.  Restore taint checks and add
	some additional untainting code.  Update doc.

2006-05-08  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: -r now also accepts 'HEAD' as argument (clearer than
	'').  Viewcvs URL's for binary files now use application/octet-stream
	content type; diff URLs are also more compatible with viewcvs (removed
	'.diff').  Add -E option to avoid the diff if a file is added or
	removed.